# riffq

./: .gitignore  Cargo.toml  Makefile  README.md  RELEASE_NOTES.md  TASKS.md  agent-task-data-flow.md  agents.md  api-reference.md  arrow-report.md  catalog.md  changelog.md  duckdb_arrow_sample.py  index.html  index.md  integrate_pg_catalog.md  introspect_query_columns.py  mkdocs.yml  objects.inv  prep-codex.sh  prep-release-teleduck.sh  prep-release.sh  pyproject.toml  requirements.docs.txt  requirements.txt  sitemap.xml  solution.md  try_extended_protocol_client.py  try_pg.py
.github/workflows/: build-release.yml  ci.yml  merge-main.yml  mkdocs.yml  release-teleduck.yml
agent-tasks/: 102.md  103.md  104.md  105.md  106.md
api-reference/: index.html
catalog/: index.html
changelog/: index.html
css/: base.css
docs/: api-reference.md  catalog.md  changelog.md  faq.md  getting-started.md  index.md
duckdb-pgcatalog/: server.py
duckdb_pgcatalog/: __init__.py  server.py  test_duckdb_catalog.py
duckdb_pgcatalog/certs/: server.crt
example/: anotherdb.db  convert_csv_to_parquet.py  fetch_binance_data.sh  klines-view.sql  lazy_catalog.py  pg_duckdb.py
example/psql-redis/: README.md  psql_redis.py  requirements.txt  run_tests.py  test_psql_redis.py
faq/: index.html
getting-started/: index.html
psycopg/: __init__.py
pysrc/riffq/: __init__.py  connection.py  helpers.py  testing.py
query-proxy/: proxy.py  requirements.txt
riffq/: __init__.py  connection.py
search/: search_index.json
src/: catalog_emulation.rs  director.rs  helpers.rs  lib.rs
src/pg/: arrow_map.rs  mod.rs
teleduck/: Dockerfile  README.md  TODO.md  __main__.py  pyproject.toml  requirements.txt  server.py  test_cli.py  test_duckdb_catalog.py  test_sql_init.py
teleduck/certs/: server.key
teleduck/src/teleduck/: __init__.py  __main__.py  server.py
teleduck/src/teleduck.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
teleduck/teleduck.egg-info/: SOURCES.txt  entry_points.txt
teleduck/tests/: server_readiness.py  test_checkpoint_on_shutdown.py  test_cli.py  test_duckdb_catalog.py  test_lazy_catalog.py  test_read_only.py  test_sql_init.py  test_type_mapping.py
test_concurrency/: server.py  server_duckdb.py  server_duckdb_arrow.py  server_polars.py  test_concurrency_duckdb.py  test_concurrency_duckdb_arrow.py  test_concurrency_polars.py  utils.py
tests/: helpers.py  test_auth_connect_custom_error.py  test_catalog_emulation.py  test_connection_id.py  test_duckdb_catalog.py  test_duckdb_pgcatalog.py  test_handle_shutdown.py  test_lazy_catalog.py  test_multiple_databases.py  test_on_authentication.py  test_on_authentication_custom_error.py  test_on_connect.py  test_on_connect_custom_error.py  test_on_connect_hostname.py  test_on_disconnect.py  test_on_shutdown.py  test_pg_catalog.py  test_pg_catalog_query.py  test_project_metadata.py  test_query_error.py  test_query_proxy.py  test_query_proxy_abort.py  test_register_catalog.py  test_register_user_catalog.py  test_riffqserver_tags.py  test_server.py  test_server_tls.py  test_server_version.py  test_silent_client.py  test_tags.py
