[package]
name = "riffq"
version = "0.1.7"
edition = "2024"

[lib]
name = "_riffq"
crate-type = ["cdylib"]

[profile.fast]
inherits = "dev"
opt-level = 1
debug = false
overflow-checks = false
incremental = true
codegen-units = 4

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }

pgwire = "0.40.0"
# pgwire = { git = "https://github.com/ybrs/pgwire", branch = "expose-sni", package = "pgwire" }

bytes = "1.5"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
hex = "0.4.3"
postgres-types = "0.2"
tokio-rustls = "0.26"
rustls-pemfile = "2"
rustls-pki-types = "1"
arrow = { version = "58.0.0", features = ["ffi", "canonical_extension_types"] }
sqlparser = "0.62"


chrono = "0.4.41"
log = "0.4"
datafusion = "54.0.0"
# In-tree path dep: required because this crate is now on DataFusion 54, which the
# previously-pinned git rev (a DataFusion 53 build) is incompatible with. After
# publishing a DataFusion 54 pg_catalog, swap this for the git line below + bump the rev.
datafusion_pg_catalog = { path = "../pg_catalog", package = "datafusion_pg_catalog" }
# datafusion_pg_catalog = { git = "https://github.com/ybrs/pg_catalog", rev = "<df54-rev>", package = "datafusion_pg_catalog" }

env_logger = "0.11.8"


arrow-schema  = { version = "58.0.0" }
