[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "riffq"
dynamic = ["version"]
requires-python = ">=3.8"
classifiers = ["Programming Language :: Rust"]
packages = [{ include = "riffq", from = "pysrc" }] 

[tool.maturin]
module-name = "riffq._riffq"
python-source = "pysrc"

