[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "riffq"
dynamic = ["version"]
requires-python = ">=3.8"
classifiers = ["Programming Language :: Rust"]
packages = [{ include = "riffq", from = "pysrc" }] 
description = "riffq is a toolkit for building PostgreSQL wire-compatible databases. Think exposing pandas/polars dataframe or duckdb with PostgreSQL wire protocol with pg_catalog compatibility."
readme = "README.md"
dependencies = [
    "pyarrow",
]

[tool.maturin]
module-name = "riffq._riffq"
python-source = "pysrc"
