[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "teleduck"
version = "0.1.0"
description = "Serve DuckDB over PostgreSQL protocol using riffq"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "duckdb",
    "pyarrow",
    "click",
    "riffq",
]

[project.scripts]
teleduck = "teleduck.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["teleduck"]
include-package-data = true

[tool.setuptools.package-data]
teleduck = ["certs/*"]
